Iterate cleaner compilation until parsed failures are removed